# Movie_Colorbar

./: README.md  color_bar.py  generative_functions.py  pyproject.toml
.github/: dependabot.yml
movie_colorbar/: __init__.py  __main__.py  color_bar.py  generative_functions.py  image.py  newmain.py
new/: __main__.py  bar.py  colors.py  constants.py  extract.py  image.py  process.py
