[tool.poetry]
name = "movie_colorbar"
version = "0.2.1"
description = "Turn a video into a colorbar"
authors = ["Felix Soubelet <felix.soubelet@liverpool.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^9.0"
loguru = ">=0.5,<0.7"
typer = "^0.3"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.11"

[tool.poetry.scripts]
colorbar = "movie_colorbar.__main__:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
